unpackaged/main/default/objects/Address/fields/AD1__c.field-meta.xml
<CustomField>
    <fullName>AD1__c</fullName>
    <label>AD1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>