unpackaged/main/default/objects/Address/fields/AD2__c.field-meta.xml
<CustomField>
    <fullName>AD2__c</fullName>
    <label>AD2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>