unpackaged/main/default/objects/Address/fields/AD3__c.field-meta.xml
<CustomField>
    <fullName>AD3__c</fullName>
    <label>AD3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>